--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,17 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class = "container popup-container">
-         <h1>Real Score</h1>
-         <input type = "text" id= "teamSearch" placeholder="Search for your favourite team">
-         <ul id="searchResults"></ul>
-         <button id="openFullPage">Open Full Page</button>
+    <div class="container popup-container">
+        <header>
+            <h1>Real Score</h1>
+            <input type="text" id="teamSearch" placeholder="Search for your favourite team">
+        </header>
+        <ul id="searchResults"></ul>
+        <button id="openFullPage">Open Full Page</button>
     </div>
-    <script src="popup.js" type = "module"></script>
+    <script src="popup.js" type="module"></script>
 </body>
+
 </html>
